Fix Output Foto Barang

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
-  # geolocator: ^9.0.2
-  # google_maps_flutter: ^2.1.1
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
+  geocoding: ^3.0.0
+  # geolocator: ^9.0.0
+  # shared_preferences: ^2.0.13
+  # url_launcher: ^6.1.7
+  # google_maps_flutter: ^2.2.1
+  # geocoding: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
