--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,15 @@ dependencies:
     sdk: flutter
   http: ^1.2.2
   flutter_map: ^5.0.0
-  latlong2: ^0.9.0
+  latlong2: ^0.9.1
   geocoding: ^3.0.0
+  url_launcher: ^6.3.1
+  shared_preferences: ^2.3.2
+  # geolocator: ^13.0.1
+  # location: ^4.4.0
   # geolocator: ^9.0.0
+  # flutter_map_directions: ^0.0.5
   # shared_preferences: ^2.0.13
-  # url_launcher: ^6.1.7
   # google_maps_flutter: ^2.2.1
   # geocoding: ^2.0.5
 
