--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.2
-  flutter_map: ^5.0.0
-  latlong2: ^0.9.1
-  geocoding: ^3.0.0
+  # flutter_map: ^5.0.0
+  # latlong2: ^0.9.1
+  # geocoding: ^3.0.0
   url_launcher: ^6.3.1
   shared_preferences: ^2.3.2
+  # flutter_local_notifications: ^18.0.0
   # geolocator: ^13.0.1
   # location: ^4.4.0
   # geolocator: ^9.0.0
@@ -54,6 +55,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
